--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -67,6 +67,45 @@
     .ventanaPrincipal{
         background-color:#000;
     }
+    .edicion_fila > .v-slot {
+   		padding: 0% 1%;
+	}
+	.v-grid-header{
+		color: #fff;
+		background: none;
+    	background-color: #646464 !important;
+    	font-weight: bold;
+	}
+	.v-grid-cell{
+		background : none !important;
+	}
+	.v-grid-scroller{
+		border:none;
+	}
+	.v-grid-scroller::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    border: 4px solid transparent;
+    background: #ed1c24;
+    -webkit-background-clip: content-box;
+    background-clip: content-box;
+}
+.v-grid-header-deco{
+background:none;
+background-color:#646464 !important;
+}
+.v-button:focus:after, .v-textfield:focus {
+    border-color: #ed1c24;
+    box-shadow: 0 0 0 2px rgba(237, 28, 36, 0.5);
+}
+.v-grid-row-selected > .v-grid-cell {
+    color: #000000;
+    font-weight: 400;
+    border-color: #f9dedf;
+    background-color: rgba(237, 28, 36, 0.13) !important;
+}
+.v-grid-cell-focused:before {
+    border: none;
+}	
 
   // Insert your own theme rules here
 }
